# nohrs

./: .gitignore  Cargo.toml  README.md  README_CN.md  build.rs  buils.sh  update.sh
assets/windows/: nohrs.rc
docs/: project.ja.md
src/: lib.rs  main.rs
src/pages/: explorer.rs  extensions.rs  git.rs  icon_themes.rs  keymap.rs  mod.rs  s3.rs  search.rs  settings.rs  themes.rs
src/services/fs/: listing.rs
src/ui/: app.rs  app_menus.rs  assets.rs  mod.rs  theme.rs  title_bar.rs
src/ui/components/: file_list.rs  mod.rs  pane.rs
src/ui/components/layout/: footer.rs  mod.rs  unified_toolbar.rs
src/ui/window/: mod.rs  traffic_lights.rs
