[package]
name = "nohrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "nohrs"
path = "src/lib.rs"


[features]
default = []
gui = ["dep:gpui", "dep:gpui-component", "dep:rust-embed"]

[[bin]]
name = "nohrs"
path = "src/gui/main.rs"
required-features = ["gui"]

[dependencies]
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
# Planned (add when implemented): sled = "0.34", sqlite crates, aws-sdk-s3/object_store, tantivy, gix/git2, comrak, syntect, notify
gpui = { git = "https://github.com/zed-industries/zed", optional = true }
gpui-macros = "0.2.2"
gpui-component = { git = "https://github.com/linruohan/gpui-component.git", optional = true }
gpui-component-assets = { git = "https://github.com/linruohan/gpui-component.git" }
rust-embed = { version = "8", optional = true }
comrak = "0.22"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
notify = "6"
trash = "5"
time = { version = "0.3", features = ["formatting", "macros"] }
walkdir = "2"
rust-i18n = "3.1.5"

[lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"

[profile.dev]
codegen-units = 16
split-debuginfo = "unpacked"
opt-level = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
rpath = false
# 禁用debug
debug = 0
strip = "debuginfo"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }

[profile.release]
opt-level = 3
lto = true
codegen-units = 8
strip = true
debug = false
